secp256k1-zkp-sys/secp_bindings.rs

#[doc = " Data structure containing data on all signers in a single session."]
#[doc = ""]
#[doc = " The workflow for this structure is as follows:"]
#[doc = ""]
#[doc = " 1. This structure is initialized with `musig_session_initialize` or"]
#[doc = "    `musig_session_initialize_verifier`, which set the `index` field, and zero out"]
#[doc = "    all other fields. The public session is initialized with the signers'"]
#[doc = "    nonce_commitments."]
#[doc = ""]
#[doc = " 2. In a non-public session the nonce_commitments are set with the function"]
#[doc = "    `musig_get_public_nonce`, which also returns the signer's public nonce. This"]
#[doc = "    ensures that the public nonce is not exposed until all commitments have been"]
#[doc = "    received."]
#[doc = ""]
#[doc = " 3. Each individual data struct should be updated with `musig_set_nonce` once a"]
#[doc = "    nonce is available. This function takes a single signer data struct rather than"]
#[doc = "    an array because it may fail in the case that the provided nonce does not match"]
#[doc = "    the commitment. In this case, it is desirable to identify the exact party whose"]
#[doc = "    nonce was inconsistent."]
#[doc = ""]
#[doc = " Fields:"]
#[doc = "   present: indicates whether the signer's nonce is set"]
#[doc = "     index: index of the signer in the MuSig key aggregation"]
#[doc = "     nonce: public nonce, must be a valid curvepoint if the signer is `present`"]
#[doc = " nonce_commitment: commitment to the nonce, or all-bits zero if a commitment"]
#[doc = "                   has not yet been set"]
#[repr(C)]
#[derive(Copy, Clone)]
pub struct secp256k1_zkp_musig_session_signer_data {
    pub present: ::std::os::raw::c_int,
    pub index: u32,
    pub nonce: secp256k1_zkp_pubkey,
    pub nonce_commitment: [::std::os::raw::c_uchar; 32usize],
}
#[test]
fn bindgen_test_layout_secp256k1_zkp_musig_session_signer_data() {
    assert_eq!(
        ::std::mem::size_of::<secp256k1_zkp_musig_session_signer_data>(),
        104usize,
        concat!(
            "Size of: ",
            stringify!(secp256k1_zkp_musig_session_signer_data)
        )
    );
    assert_eq!(
        ::std::mem::align_of::<secp256k1_zkp_musig_session_signer_data>(),
        4usize,
        concat!(
            "Alignment of ",
            stringify!(secp256k1_zkp_musig_session_signer_data)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<secp256k1_zkp_musig_session_signer_data>())).present as *const _
                as usize
        },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(secp256k1_zkp_musig_session_signer_data),
            "::",
            stringify!(present)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<secp256k1_zkp_musig_session_signer_data>())).index as *const _
                as usize
        },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(secp256k1_zkp_musig_session_signer_data),
            "::",
            stringify!(index)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<secp256k1_zkp_musig_session_signer_data>())).nonce as *const _
                as usize
        },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(secp256k1_zkp_musig_session_signer_data),
            "::",
            stringify!(nonce)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<secp256k1_zkp_musig_session_signer_data>())).nonce_commitment
                as *const _ as usize
        },
        72usize,
        concat!(
            "Offset of field: ",
            stringify!(secp256k1_zkp_musig_session_signer_data),
            "::",
            stringify!(nonce_commitment)
        )
    );
}
#[doc = " Opaque data structure that holds a MuSig partial signature."]
#[doc = ""]
#[doc = "  The exact representation of data inside is implementation defined and not"]
#[doc = "  guaranteed to be portable between different platforms or versions. It is however"]
#[doc = "  guaranteed to be 32 bytes in size, and can be safely copied/moved. If you need"]
#[doc = "  to convert to a format suitable for storage, transmission, or comparison, use the"]
#[doc = "  `musig_partial_signature_serialize` and `musig_partial_signature_parse`"]
#[doc = "  functions."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct secp256k1_zkp_musig_partial_signature {
    pub data: [::std::os::raw::c_uchar; 32usize],
}
#[test]
fn bindgen_test_layout_secp256k1_zkp_musig_partial_signature() {
    assert_eq!(
        ::std::mem::size_of::<secp256k1_zkp_musig_partial_signature>(),
        32usize,
        concat!(
            "Size of: ",
            stringify!(secp256k1_zkp_musig_partial_signature)
        )
    );
    assert_eq!(
        ::std::mem::align_of::<secp256k1_zkp_musig_partial_signature>(),
        1usize,
        concat!(
            "Alignment of ",
            stringify!(secp256k1_zkp_musig_partial_signature)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<secp256k1_zkp_musig_partial_signature>())).data as *const _
                as usize
        },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(secp256k1_zkp_musig_partial_signature),
            "::",
            stringify!(data)
        )
    );
}
extern "C" {
    #[doc = " Computes a combined public key and the hash of the given public keys"]
    #[doc = ""]
    #[doc = "  Returns: 1 if the public keys were successfully combined, 0 otherwise"]
    #[doc = "  Args:        ctx: pointer to a context object initialized for verification"]
    #[doc = "                    (cannot be NULL)"]
    #[doc = "           scratch: scratch space used to compute the combined pubkey by"]
    #[doc = "                    multiexponentiation. If NULL, an inefficient algorithm is used."]
    #[doc = "  Out: combined_pk: the MuSig-combined xonly public key (cannot be NULL)"]
    #[doc = "       pre_session: if non-NULL, pointer to a musig_pre_session struct to be used in"]
    #[doc = "                    `musig_session_initialize`."]
    #[doc = "   In:     pubkeys: input array of public keys to combine. The order is important;"]
    #[doc = "                    a different order will result in a different combined public"]
    #[doc = "                    key (cannot be NULL)"]
    #[doc = "         n_pubkeys: length of pubkeys array"]
    pub fn secp256k1_zkp_musig_pubkey_combine(
        ctx: *const secp256k1_zkp_context,
        scratch: *mut secp256k1_zkp_scratch_space,
        combined_pk: *mut secp256k1_zkp_xonly_pubkey,
        pre_session: *mut secp256k1_zkp_musig_pre_session,
        pubkeys: *const secp256k1_zkp_xonly_pubkey,
        n_pubkeys: size_t,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Initializes a signing session for a signer"]
    #[doc = ""]
    #[doc = "  Returns: 1: session is successfully initialized"]
    #[doc = "           0: session could not be initialized: secret key or secret nonce overflow"]
    #[doc = "  Args:         ctx: pointer to a context object, initialized for signing (cannot"]
    #[doc = "                     be NULL)"]
    #[doc = "  Out:      session: the session structure to initialize (cannot be NULL)"]
    #[doc = "            signers: an array of signers' data to be initialized. Array length must"]
    #[doc = "                     equal to `n_signers` (cannot be NULL)"]
    #[doc = " nonce_commitment32: filled with a 32-byte commitment to the generated nonce"]
    #[doc = "                     (cannot be NULL)"]
    #[doc = "  In:  session_id32: a *unique* 32-byte ID to assign to this session (cannot be"]
    #[doc = "                     NULL). If a non-unique session_id32 was given then a partial"]
    #[doc = "                     signature will LEAK THE SECRET KEY."]
    #[doc = "              msg32: the 32-byte message to be signed. Shouldn't be NULL unless you"]
    #[doc = "                     require sharing nonce commitments before the message is known"]
    #[doc = "                     because it reduces nonce misuse resistance. If NULL, must be"]
    #[doc = "                     set with `musig_session_get_public_nonce`."]
    #[doc = "        combined_pk: the combined xonly public key of all signers (cannot be NULL)"]
    #[doc = "        pre_session: pointer to a musig_pre_session struct from"]
    #[doc = "                     `musig_pubkey_combine` (cannot be NULL)"]
    #[doc = "          n_signers: length of signers array. Number of signers participating in"]
    #[doc = "                     the MuSig. Must be greater than 0 and at most 2^32 - 1."]
    #[doc = "           my_index: index of this signer in the signers array"]
    #[doc = "             seckey: the signer's 32-byte secret key (cannot be NULL)"]
    pub fn secp256k1_zkp_musig_session_initialize(
        ctx: *const secp256k1_zkp_context,
        session: *mut secp256k1_zkp_musig_session,
        signers: *mut secp256k1_zkp_musig_session_signer_data,
        nonce_commitment32: *mut ::std::os::raw::c_uchar,
        session_id32: *const ::std::os::raw::c_uchar,
        msg32: *const ::std::os::raw::c_uchar,
        combined_pk: *const secp256k1_zkp_xonly_pubkey,
        pre_session: *const secp256k1_zkp_musig_pre_session,
        n_signers: size_t,
        my_index: size_t,
        seckey: *const ::std::os::raw::c_uchar,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " Gets the signer's public nonce given a list of all signers' data with commitments"]
    #[doc = ""]
    #[doc = "  Returns: 1: public nonce is written in nonce"]
    #[doc = "           0: signer data is missing commitments or session isn't initialized"]
    #[doc = "              for signing"]
    #[doc = "  Args:        ctx: pointer to a context object (cannot be NULL)"]
    #[doc = "           session: the signing session to get the nonce from (cannot be NULL)"]
    #[doc = "           signers: an array of signers' data initialized with"]
    #[doc = "                    `musig_session_initialize`. Array length must equal to"]
    #[doc = "                    `n_commitments` (cannot be NULL)"]
    #[doc = "  Out:       nonce: the nonce (cannot be NULL)"]
    #[doc = "  In:  commitments: array of 32-byte nonce commitments (cannot be NULL)"]
    #[doc = "     n_commitments: the length of commitments and signers array. Must be the total"]
    #[doc = "                    number of signers participating in the MuSig."]
    #[doc = "             msg32: the 32-byte message to be signed. Must be NULL if already"]
    #[doc = "                    set with `musig_session_initialize` otherwise can not be NULL."]
    pub fn secp256k1_zkp_musig_session_get_public_nonce(
        ctx: *const secp256k1_zkp_context,
        session: *mut secp256k1_zkp_musig_session,
        signers: *mut secp256k1_zkp_musig_session_signer_data,
        nonce: *mut secp256k1_zkp_pubkey,
        commitments: *const *const ::std::os::raw::c_uchar,
        n_commitments: size_t,
        msg32: *const ::std::os::raw::c_uchar,
    ) -> ::std::os::raw::c_int;
}
